Fixed display issue on iOS
Adds remote debugging for Safari on iOS

--- a/src/components/ArtistCard/ArtistCard.css
+++ b/src/components/ArtistCard/ArtistCard.css
@@ -11,7 +11,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    aspect-ratio: 2.4/1;
     padding-bottom: 10px;
 }
 
