--- a/src/components/TopItems/TopItemCard.css
+++ b/src/components/TopItems/TopItemCard.css
@@ -16,7 +16,6 @@
 #top-items {
     .top-item-card-container {
         justify-content: center;
-        padding: 0px 10px;
         margin-top: 8px;
     }
 
